--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,16 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-plugin-plugin</artifactId>
+                <version>3.6.0</version>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.antlr</groupId>
@@ -39,8 +49,5 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
-
-
 
 </project>
